-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0
-
None
-
3
-
10408
Under Lustre 2.4.0, the lctl subcommand lfsck_start ignores the n/-dryrun command. For instance:
lctl lfsck_start --dryrun on -M <MDT name>
That currently results in a real run of the OI scrub, and real modification to the filesystem, directly in contradiction to the documentation.
I can understand if implementing that is going to take more work than we want to spend right now, but until the functionality is implemented the cmomand must return an error. It should not go ahead and make changes.
Further, I am not particularly fond of the "--dryrun on" syntax. Unless there is a really, really good reason that -n and --dryrun need to take on/off options, the command line interface should not be designed this way. I think that -n/--dryrun should be optionless. (If they are present on the command line that means dryrun mode must be enabled.)
That would match most sysadmins' expected behavior. Every other command I think that I have ever seen makes the dryrun command optionless. For instance:
- fsck -N
- rsync -n/--dryrun