lustre/lfsck/lfsck_lib.c
@@ -922,6 +922,10 @@ int lfsck_start(const struct lu_env *env, struct dt_device *key,
 	}
 
 	if (start->ls_valid & LSV_DRYRUN) {
+		valid |= DOIV_DRYRUN;
+		if (start->ls_flags & LPF_DRYRUN)
+			flags |= DOIF_DRYRUN;
+
 		if ((start->ls_flags & LPF_DRYRUN) &&
 		    !(bk->lb_param & LPF_DRYRUN)) {
 			bk->lb_param |= LPF_DRYRUN;
@@ -994,8 +998,11 @@ int lfsck_start(const struct lu_env *env, struct dt_device *key,
 
 trigger:
 	lfsck->li_args_dir = LUDA_64BITHASH | LUDA_VERIFY;
-	if (bk->lb_param & LPF_DRYRUN)
+	if (bk->lb_param & LPF_DRYRUN) {
 		lfsck->li_args_dir |= LUDA_VERIFY_DRYRUN;
+		valid |= DOIV_DRYRUN;
+		flags |= DOIF_DRYRUN;
+	}
 
 	if (bk->lb_param & LPF_FAILOUT) {
 		valid |= DOIV_ERROR_HANDLE;
